@@ -7,144 +7,86 @@ import java.util.List;
 import java.util.Set;
 import java.util.UUID;
 
-/**
- * 代表地铁系统中的一条线路
- */
 public class Line {
     private String id;
     private String name;
     private final List<String> orderedStopIds;
     private final List<String> portalIds;
     private List<RoutePoint> routePoints;
-    private String color; // 线路颜色
-    private String terminusName; // 终点站方向名称
-    private Double maxSpeed; // 线路最大速度
-    private double ticketPrice; // 线路乘车价格
-    private boolean railProtected; // 是否保护已记录线路上的铁轨
+    private String color;
+    private String terminusName;
+    private Double maxSpeed;
+    private double ticketPrice;
+    private boolean railProtected;
     private Long routeRecordedAtEpochMillis;
     private UUID routeRecordedBy;
     private UUID routeRecordedCartId;
-    private UUID owner; // 线路所有者 UUID，null 表示服务器所有
-    private final Set<UUID> admins; // 线路管理员 UUID 集合
-    private String worldName; // 线路所在世界名称，null 表示还未添加任何站点
-    
-    /**
-     * 创建新线路
-     * 
-     * @param id 线路ID
-     * @param name 线路名称
-     */
+    private UUID owner;
+    private final Set<UUID> admins;
+    private String worldName;
+
+    // --- New fields for advanced pricing and line management ---
+    private FareRule fareRule;
+    private LineStatus lineStatus = LineStatus.NORMAL;
+    private final List<String> alternativeRouteIds = new ArrayList<>();
+    private String suspensionMessage;
+
     public Line(String id, String name) {
         this.id = id;
         this.name = name;
-        this.orderedStopIds = new ArrayList<>();
-        this.portalIds = new ArrayList<>();
-        this.routePoints = new ArrayList<>();
-        this.color = "&f"; // 默认白色
-        this.terminusName = ""; // 默认空
-        this.maxSpeed = null; // 默认使用config.yml中的maxspeed
-        this.ticketPrice = 0.0; // 默认免费
+        this.orderedStopIds = new ArrayList<String>();
+        this.portalIds = new ArrayList<String>();
+        this.routePoints = new ArrayList<RoutePoint>();
+        this.color = "&f";
+        this.terminusName = "";
+        this.maxSpeed = null;
+        this.ticketPrice = 0.0;
         this.railProtected = false;
-        this.admins = new HashSet<>();
+        this.admins = new HashSet<UUID>();
     }
-    
-    /**
-     * 获取线路ID
-     * 
-     * @return 线路ID
-     */
+
     public String getId() {
         return id;
     }
-    
-    /**
-     * 获取线路名称
-     * 
-     * @return 线路名称
-     */
+
     public String getName() {
         return name;
     }
-    
-    /**
-     * 设置线路名称
-     * 
-     * @param name 新名称
-     */
+
     public void setName(String name) {
         this.name = name;
     }
-    
-    /**
-     * 获取线路颜色
-     * 
-     * @return 线路颜色
-     */
+
     public String getColor() {
         return color;
     }
-    
-    /**
-     * 设置线路颜色
-     * 
-     * @param color 新颜色
-     */
+
     public void setColor(String color) {
         this.color = color;
     }
-    
-    /**
-     * 获取终点站方向名称
-     * 
-     * @return 终点站方向名称
-     */
+
     public String getTerminusName() {
         return terminusName;
     }
-    
-    /**
-     * 设置终点站方向名称
-     * 
-     * @param terminusName 新终点站方向名称
-     */
+
     public void setTerminusName(String terminusName) {
         this.terminusName = terminusName;
     }
-    
-    /**
-     * 获取线路最大速度
-     * 
-     * @return 线路最大速度，如果未设置则返回n-1.0
-     */
+
     public Double getMaxSpeed() {
         if (maxSpeed == null)
             return -1.0;
         return maxSpeed;
     }
-    
-    /**
-     * 设置线路最大速度
-     * 
-     * @param maxSpeed 新的最大速度
-     */
+
     public void setMaxSpeed(Double maxSpeed) {
         this.maxSpeed = maxSpeed;
     }
-    
-    /**
-     * 获取线路乘车价格
-     * 
-     * @return 乘车价格
-     */
+
     public double getTicketPrice() {
         return ticketPrice;
     }
-    
-    /**
-     * 设置线路乘车价格
-     * 
-     * @param ticketPrice 新的价格
-     */
+
     public void setTicketPrice(double ticketPrice) {
         this.ticketPrice = Math.max(0.0, ticketPrice);
     }
@@ -156,26 +98,21 @@ public class Line {
     public void setRailProtected(boolean railProtected) {
         this.railProtected = railProtected;
     }
-    
-    /**
-     * 获取有序停靠区ID列表
-     * 
-     * @return 有序停靠区ID列表
-     */
+
     public List<String> getOrderedStopIds() {
-        return new ArrayList<>(orderedStopIds);
+        return new ArrayList<String>(orderedStopIds);
     }
 
     public List<String> getPortalIds() {
-        return new ArrayList<>(portalIds);
+        return new ArrayList<String>(portalIds);
     }
 
     public List<RoutePoint> getRoutePoints() {
-        return new ArrayList<>(routePoints);
+        return new ArrayList<RoutePoint>(routePoints);
     }
 
     public void setRoutePoints(Collection<RoutePoint> routePoints) {
-        this.routePoints = new ArrayList<>();
+        this.routePoints = new ArrayList<RoutePoint>();
         if (routePoints != null) {
             for (RoutePoint point : routePoints) {
                 if (point != null) {
@@ -227,27 +164,15 @@ public class Line {
         this.routeRecordedBy = null;
         this.routeRecordedCartId = null;
     }
-    
-    /**
-     * 检查线路是否为环线
-     *
-     * @return 是否为环线
-     */
+
     public boolean isCircular() {
         if (orderedStopIds.isEmpty() || orderedStopIds.size() < 2) {
             return false;
         }
         return orderedStopIds.get(0).equals(orderedStopIds.get(orderedStopIds.size() - 1));
     }
-    
-    /**
-     * 向线路添加停靠区
-     * 
-     * @param stopId 停靠区ID
-     * @param index 添加位置，-1表示添加到末尾
-     */
+
     public void addStop(String stopId, int index) {
-        // 先移除，防止重复
         boolean isMakingCircular = !isCircular() &&
                 !orderedStopIds.isEmpty() &&
                 orderedStopIds.get(0).equals(stopId) &&
@@ -256,8 +181,7 @@ public class Line {
         if (orderedStopIds.contains(stopId) && !isMakingCircular) {
             orderedStopIds.remove(stopId);
         }
-        
-        // 添加到指定位置或末尾
+
         if (isCircular() && index == -1) {
             orderedStopIds.add(orderedStopIds.size() - 1, stopId);
         } else if (index >= 0 && index < orderedStopIds.size()) {
@@ -266,28 +190,17 @@ public class Line {
             orderedStopIds.add(stopId);
         }
     }
-    
-    /**
-     * 从线路中移除停靠区
-     * 
-     * @param stopId 停靠区ID
-     */
+
     public void delStop(String stopId) {
         orderedStopIds.remove(stopId);
     }
-    
-    /**
-     * 检查线路是否包含指定停靠区
-     * 
-     * @param stopId 停靠区ID
-     * @return 是否包含
-     */
+
     public boolean containsStop(String stopId) {
         return orderedStopIds.contains(stopId);
     }
 
     public boolean addPortal(String portalId) {
-        if (portalId == null || portalId.isBlank() || portalIds.contains(portalId)) {
+        if (portalId == null || portalId.trim().isEmpty() || portalIds.contains(portalId)) {
             return false;
         }
         return portalIds.add(portalId);
@@ -300,13 +213,7 @@ public class Line {
     public boolean containsPortal(String portalId) {
         return portalIds.contains(portalId);
     }
-    
-    /**
-     * 获取指定停靠区的下一个停靠区ID
-     * 
-     * @param currentStopId 当前停靠区ID
-     * @return 下一个停靠区ID，如果当前是终点站或不存在，则返回null
-     */
+
     public String getNextStopId(String currentStopId) {
         int index = orderedStopIds.indexOf(currentStopId);
         if (index == -1) {
@@ -340,23 +247,13 @@ public class Line {
     }
 
     public Set<UUID> getAdmins() {
-        return new HashSet<>(admins);
+        return new HashSet<UUID>(admins);
     }
 
-    /**
-     * 获取线路所在世界名称
-     * 
-     * @return 世界名称，如果线路还没有站点则返回null
-     */
     public String getWorldName() {
         return worldName;
     }
 
-    /**
-     * 设置线路所在世界名称
-     * 
-     * @param worldName 世界名称
-     */
     public void setWorldName(String worldName) {
         this.worldName = worldName;
     }
@@ -391,13 +288,7 @@ public class Line {
         admins.remove(null);
         return removed;
     }
-    
-    /**
-     * 获取指定停靠区的上一个停靠区ID
-     * 
-     * @param currentStopId 当前停靠区ID
-     * @return 上一个停靠区ID，如果当前是起点站或不存在，则返回null
-     */
+
     public String getPreviousStopId(String currentStopId) {
         int index = orderedStopIds.indexOf(currentStopId);
         if (index <= 0) {
@@ -412,4 +303,101 @@ public class Line {
         }
         return orderedStopIds.get(index - 1);
     }
-} 
+
+    // =============================================================
+    // Advanced Pricing (FareRule)
+    // =============================================================
+
+    /**
+     * Get the fare rule for this line. If null, the legacy ticketPrice is used.
+     */
+    public FareRule getFareRule() {
+        return fareRule;
+    }
+
+    /**
+     * Set the fare rule for this line.
+     */
+    public void setFareRule(FareRule fareRule) {
+        this.fareRule = fareRule;
+    }
+
+    // =============================================================
+    // Line Status (Suspension/Maintenance)
+    // =============================================================
+
+    /**
+     * Get the current operational status of this line.
+     */
+    public LineStatus getLineStatus() {
+        return lineStatus != null ? lineStatus : LineStatus.NORMAL;
+    }
+
+    /**
+     * Set the operational status of this line.
+     */
+    public void setLineStatus(LineStatus lineStatus) {
+        this.lineStatus = lineStatus != null ? lineStatus : LineStatus.NORMAL;
+    }
+
+    // =============================================================
+    // Alternative Routes
+    // =============================================================
+
+    /**
+     * Get the list of alternative route line IDs suggested when this line is suspended.
+     */
+    public List<String> getAlternativeRouteIds() {
+        return new ArrayList<>(alternativeRouteIds);
+    }
+
+    /**
+     * Set the list of alternative route line IDs.
+     */
+    public void setAlternativeRouteIds(Collection<String> alternativeRouteIds) {
+        this.alternativeRouteIds.clear();
+        if (alternativeRouteIds != null) {
+            for (String id : alternativeRouteIds) {
+                if (id != null && !id.trim().isEmpty()) {
+                    this.alternativeRouteIds.add(id.trim());
+                }
+            }
+        }
+    }
+
+    /**
+     * Add an alternative route by line ID.
+     */
+    public boolean addAlternativeRoute(String lineId) {
+        if (lineId == null || lineId.trim().isEmpty() || alternativeRouteIds.contains(lineId.trim())) {
+            return false;
+        }
+        return alternativeRouteIds.add(lineId.trim());
+    }
+
+    /**
+     * Remove an alternative route by line ID.
+     */
+    public boolean removeAlternativeRoute(String lineId) {
+        return alternativeRouteIds.remove(lineId);
+    }
+
+    // =============================================================
+    // Suspension Message
+    // =============================================================
+
+    /**
+     * Get the message displayed to players when trying to board a suspended line.
+     */
+    public String getSuspensionMessage() {
+        return suspensionMessage;
+    }
+
+    /**
+     * Set the suspension message for this line.
+     */
+    public void setSuspensionMessage(String suspensionMessage) {
+        this.suspensionMessage = suspensionMessage;
+    }
+}
+
