@@ -2,7 +2,35 @@ package org.cubexmc.metro.model;
 
 import org.bukkit.Location;
 
-public record RoutePoint(String worldName, double x, double y, double z) {
+public final class RoutePoint {
+
+    private final String worldName;
+    private final double x;
+    private final double y;
+    private final double z;
+
+    public RoutePoint(String worldName, double x, double y, double z) {
+        this.worldName = worldName;
+        this.x = x;
+        this.y = y;
+        this.z = z;
+    }
+
+    public String worldName() {
+        return worldName;
+    }
+
+    public double x() {
+        return x;
+    }
+
+    public double y() {
+        return y;
+    }
+
+    public double z() {
+        return z;
+    }
 
     public static RoutePoint fromLocation(Location location) {
         if (location == null || location.getWorld() == null) {
@@ -12,7 +40,7 @@ public record RoutePoint(String worldName, double x, double y, double z) {
     }
 
     public static RoutePoint fromConfigString(String value) {
-        if (value == null || value.isBlank()) {
+        if (value == null || value.trim().isEmpty()) {
             return null;
         }
 
@@ -45,5 +73,30 @@ public record RoutePoint(String worldName, double x, double y, double z) {
         double dy = y - other.y();
         double dz = z - other.z();
         return dx * dx + dy * dy + dz * dz;
+    }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (!(o instanceof RoutePoint)) return false;
+        RoutePoint that = (RoutePoint) o;
+        return Double.compare(that.x, x) == 0
+                && Double.compare(that.y, y) == 0
+                && Double.compare(that.z, z) == 0
+                && worldName.equals(that.worldName);
+    }
+
+    @Override
+    public int hashCode() {
+        int result;
+        long temp;
+        result = worldName.hashCode();
+        temp = Double.doubleToLongBits(x);
+        result = 31 * result + (int) (temp ^ (temp >>> 32));
+        temp = Double.doubleToLongBits(y);
+        result = 31 * result + (int) (temp ^ (temp >>> 32));
+        temp = Double.doubleToLongBits(z);
+        result = 31 * result + (int) (temp ^ (temp >>> 32));
+        return result;
     }
 }
